welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:17: error: value Cyan is not a member of object java.awt.Color
  fleur(Color.Cyan)
              ^